--- a/stylesheet.css
+++ b/stylesheet.css
@@ -51,7 +51,8 @@
 
     grid-color: #575757;
 
-    cpu-color: rgb(0,190,240);
+    /* cpu-color: rgb(0,190,240); */
+    cpu-color: rgb(230,230,150);
     cpu-total-color: rgb(0,154,62);
     cpu-user-color: rgb(69,154,0);
     cpu-sys-color: rgb(255,253,81);
@@ -64,11 +65,13 @@
     mem-used-warn-color: rgb(240,190,0);
     mem-used-bad-color: rgb(240,85,0);
 
-    swap-used-color: rgb(0,190,240);
+    swap-used-color: rgb(115,255,60);
+    /* swap-used-color: rgb(0,190,240); */
     swap-used-warn-color: rgb(240,190,0);
     swap-used-bad-color: rgb(240,85,0);
 
-    network-ok-color: rgb(0,190,240);
+    /* network-ok-color: rgb(0,190,240); */
+    network-ok-color: rgb(130,130,130);
     network-warn-color: rgb(240,190,0);
     network-bad-color: rgb(240,85,0);
 }
